--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	<!-- <repositories>
+	<repositories>
 		<repository>
 			<id>spring-milestones</id>
 			<name>Spring Milestones</name>
@@ -161,6 +161,6 @@
 				<enabled>false</enabled>
 			</releases>
 		</pluginRepository>
-	</pluginRepositories> -->
+	</pluginRepositories>
 
 </project>
