--- a/pom.xml
+++ b/pom.xml
@@ -126,33 +126,38 @@
 			</plugin>
 		</plugins>
 	</build>
-	<repositories>
-        <repository>
-            <id>aliyun</id>
-            <name>aliyun</name>
-            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-            <layout>default</layout>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </snapshots>
-        </repository>
-    </repositories>
-    <pluginRepositories>
+		<repositories>
+                <repository>
+                    <id>aliyunmaven</id>
+                    <name>aliyunmaven</name>
+                    <url>https://maven.aliyun.com/repository/public</url>
+                    <layout>default</layout>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </repository>
+                <repository>
+                    <id>MavenCentral</id>
+                    <url>http://repo1.maven.org/maven2/</url>
+                </repository>
+                <repository>
+                    <id>aliyunmavenApache</id>
+                    <url>https://maven.aliyun.com/repository/apache-snapshots</url>
+                </repository>
+            </repositories>
+        <pluginRepositories>
             <pluginRepository>
-            <id>aliyun</id>
-            <name>aliyun</name>
-            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
+                <id>aliyun-plugin</id>
+                <url>https://maven.aliyun.com/repository/public</url>
+                <releases>
+                    <enabled>true</enabled>
+                </releases>
+                <snapshots>
+                    <enabled>false</enabled>
+                </snapshots>
             </pluginRepository>
         </pluginRepositories>
 	<!-- <repositories>
