支持对pull的门禁检测

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,7 +1,7 @@
 name: Lint Code Base
 on:
   push:
-    branches-ignore: [master, main, test, develop_test]
+    branches: [master, main, test, develop_test]
   pull_request:
     branches: [master, main, test, develop_test]
 jobs:
