--- a/.github/workflows/gate-check.yml
+++ b/.github/workflows/gate-check.yml
@@ -5,7 +5,8 @@ on:
     types: [opened, synchronize, reopened]
     # 在PR打开、同步、重新打开时触发
     branches:
-      - ${{ github.event.repository.default_branch }}
+      - main
+      - master
       - release/*
 
 jobs:
